# nomad-oasis-image

./: Dockerfile  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
